k8s/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fastapi

spec:

  replicas: 2

  selector:
    matchLabels:
      app: fastapi

  template:

    metadata:
      labels:
        app: fastapi

    spec:

      securityContext:

        runAsNonRoot: true

        runAsUser: 1000

        runAsGroup: 1000

      containers:

        - name: fastapi

          image: cammey20/vindiafs:latest

          imagePullPolicy: Always

          ports:

            - containerPort: 8000

          securityContext:

            allowPrivilegeEscalation: false

            capabilities:

              drop:
                - ALL

          resources:

            requests:

              cpu: "100m"

              memory: "128Mi"

            limits:

              cpu: "500m"

              memory: "256Mi"

          readinessProbe:

            httpGet:

              path: /health

              port: 8000

            initialDelaySeconds: 10

            periodSeconds: 10

          livenessProbe:

            httpGet:

              path: /health

              port: 8000

            initialDelaySeconds: 20

            periodSeconds: 20
