k8s/fastapi-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: fastapi-service

spec:

  type: LoadBalancer

  selector:
    app: fastapi

  ports:

    - port: 80
      targetPort: 8000
