k8s/mysql-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: mysql-ingress-policy

spec:

  podSelector:

    matchLabels:
      app: mysql

  policyTypes:

    - Ingress

  ingress:

    - from:

        - podSelector:
            matchLabels:
              app: fastapi

      ports:

        - protocol: TCP
          port: 3306
